init starter laravel

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Tokalink\\Starter\\StarterServiceProvider"
+                "Tokalink\\Starter\\providers\\TokalinkProvider"
             ]
         }
     }
