init starter laravel

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "minimum-stability": "stable",
     "require": {
         "rap2hpoutre/fast-excel": "^5.2",
-        "barryvdh/laravel-dompdf": "^2.0"
+        "barryvdh/laravel-dompdf": "^2.0",
+        "yajra/laravel-datatables-oracle": "^10.8"
     },
     "extra": {
         "laravel": {
