update composer profider

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Tokalink\\Starter\\providers\\TokalinkProvider"
+                "Tokalink\\Starter\\Providers\\TokalinkProvider"
             ]
         }
     }
